fixed minor bugs and removed scrollbar globally

--- a/app/art/styles.css
+++ b/app/art/styles.css
@@ -12,31 +12,6 @@ body {
   overflow: hidden;
 } */
 
-/* a {
-  position: relative;
-  text-decoration: none;
-  color: var(--text-colors);
-} */
-
-.nav {
-  width: 100%;
-  height: 60px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
-}
-
-.footer {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-}
-
 .header {
   position: absolute;
   width: 100%;
@@ -85,10 +60,4 @@ body {
   overflow: hidden;
   position: absolute;
   margin: 20px;
-}
-
-.img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
